# template-py

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: precommit.sh  run_docker.sh  setup_env.sh
src/template-py/: main.py
