[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
version = "0.1.0"
description = "Template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "black", # formatter
    "ruff", # linter
    "isort", # import sorter
]

[tool.setuptools]
package-dir = {"" = "src"}